<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="32dp"
    android:orientation="vertical"
    tools:context=".ui.activities.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome"
        android:textSize="48sp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome_1"
        android:textSize="32sp"
        android:layout_marginBottom="48dp"
        android:textColor="@color/black"/>

    <TextView
        android:textColor="@color/seventygray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/email_et"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/seventygray"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/pass_et"
        android:layout_marginBottom="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/sign_in_tv"
        android:layout_gravity="center"
        android:paddingLeft="44dp"
        android:paddingRight="44dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/red_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/sign_in"/>

    <TextView
        android:onClick="startSignupAct"
        android:layout_gravity="center"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginBottom="12dp"
        android:background="@drawable/yellow_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/seventygray"
        android:layout_gravity="center"
        android:text="@string/forgot_password"/>



</LinearLayout>